--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+<script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;400;700&display=swap" rel="stylesheet">
   <!--
